--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7068/"
+  }
+
 }
