feat: add initial working setup of Product CRUD

--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7068/"
+    "ProductAPI": "https://localhost:7068"
   }
 
 }
